// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpressSummary correctly with expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $232,323,232,324.24
  </h1>
</div>
`;

exports[`should render ExpressSummary correctly with no expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $0.25
  </h1>
</div>
`;
